Dark mode footer font fix

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,6 @@
 }
 
 .subTitle {
-  color:black !important;
 }
 
 
